--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,13 +16,16 @@
 		<nav class="main" id="n1" role="navigation">
 			<span><a href="/">Inicio</a></span>
 			<span><a href="/quizes/question">Preguntas</a></span>
+			<span><a href="/author">Autor</a></span>
 		</nav>
 		<section class="main" id="s1">
 			<%- body %>
 		</section>
 		<footer class="main" id="f1">
-			<a href="http://es.wikipedia.org/wiki/Quiz">
-				¿Qué es Quiz?</a>
+			<span><a href="http://es.wikipedia.org/wiki/Quiz">
+				¿Qué es Quiz?</a></span>
+			<span><a href="https://github.com/josepamar/quiz-josepamar">
+				Mi proyecto en GitHub</a></span>
 		</footer>
 		</div>
 
