--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,9 @@
 <table>
-<% var i; for (i=0; i < quizes.length; i++) { %>
-	<tr><td><a href = "quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
-<% } %>
+	<form method="get" action="/quizes">
+		<input type="text" name="search" placeholder="buscar pregunta"/>
+		<input type="submit" id="btnBuscar" value="Buscar" />
+	</form>
+	<% var i; for (i=0; i < quizes.length; i++) { %>
+		<tr><td><a href = "quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+	<% } %>
 </table>
