--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,8 +1,10 @@
-<table>
-	<form method="get" action="/quizes">
+<form method="get" action="/quizes">
 		<input type="text" name="search" placeholder="buscar pregunta"/>
 		<input type="submit" id="btnBuscar" value="Buscar" />
 	</form>
+	<a href = "/quizes/new"><button type = "button">Crear pregunta</button></a>
+
+<table>
 	<% var i; for (i=0; i < quizes.length; i++) { %>
 		<tr><td><a href = "quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 	<% } %>
