--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,3 +1,11 @@
+<label for = "preg" class = "rem">Tema:</label>
+	<select id = "preg" name = "quiz[indice]">
+ 		<option value="Otro" selected>Otro</option>
+  		<option value="Humanidades">Humanidades</option>
+  		<option value="Ocio">Ocio</option>
+  		<option value="Ciencia">Ciencia</option>
+  		<option value="Tecnologia">Tecnología</option>
+	</select> <p>
 <label for = "preg" class = "rem">Pregunta:</label>
 <input type = "text" id = "preg" name = "quiz[pregunta]" value = "<%= quiz.pregunta %>" /> <p>
 <label for = "resp" class = "rem">Respuesta:</label>
