--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,2 @@
 <h3>Bienvenido a <%= title %></h3>
-el portal donde podrá vrear sus propios juegos!
+el portal donde podrá crear sus propios juegos!
