--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,20 +2,25 @@
 		<input type="text" name="search" placeholder="buscar pregunta"/>
 		<input type="submit" id="btnBuscar" value="Buscar" />
 	</form>
-	<a href = "/quizes/new"><button type = "button">Crear pregunta</button></a>
+
+	<% if (session.user){ %>
+		<a href = "/quizes/new"><button type = "button">Crear pregunta</button></a>
+	<% } %>
 
 <table>
 	<% var i; for (i=0; i < quizes.length; i++) { %>
 		<tr>
 			<td><%= quizes[i].indice %>: </td>
 			<td><a href = "quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-			<td><a href = "quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
-			<td>
-				<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-					<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar
+			<% if (session.user){ %>
+				<td><a href = "quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+				<td>
+					<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+						<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar
 					</button>
 				</form>
-			</td>
+				</td>
+			<% } %>
 		</tr>
 	<% } %>
 </table>
